--- a/MP3/templates/manage_organization.html
+++ b/MP3/templates/manage_organization.html
@@ -20,20 +20,55 @@ Organization{% endblock %}
             
             if a validation error occurs, the inserted form data should persist
             #}
+            {#hg345-12-11-2023#}
             <!--name-->
+            <div class="mb-3">
+                <label for="name" class="form-label">Organization Name</label>
+                <input type="text" class="form-control" id="name" name="name"
+                       value="{{ org.get('name') or '' }}" required>
+            </div>
 
             <!--description-->
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" id="description" name="description" >{{ org.get('description') or ''}}</textarea>
+            </div>
 
             <!--address-->
+            <div class="mb-3">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" class="form-control" id="address" name="address"
+                       value="{{ org.get('address') or ''}}" required>
+            </div>
 
             <!-- website -->
+            <div class="mb-3">
+                <label for="website" class="form-label">Website</label>
+                <input type="text" class="form-control" id="website" name="website"
+                       value="{{ org.get('website') or '' }}">
+            </div>
 
             <!-- city -->
+            <div class="mb-3">
+                <label for="city" class="form-label">City</label>
+                <input type="text" class="form-control" id="city" name="city"
+                       value="{{ org.get('city') or ''}}" required>
+            </div>
 
             {# use this for country/state selection #}
+            {#hg345-12-11-2023#}
             <!-- country/state -->
+            <div class="mb-3">
+                <label for="country_state_selector" class="form-label">country/state</label>
             {{country_state_selector(country=org.country,state=org.state)}}
+            </div>
             <!--zip-->
+
+            <div class="mb-3">
+                <label for="zip" class="form-label">Zip Code</label>
+                <input type="text" class="form-control" id="zip" name="zip"
+                       value="{{ org.get('zip') or ''}}" required>
+            </div>
 
             <input type="submit" class="btn btn-primary"
                 value="Save Organization" />
