--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -1,26 +1,38 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     {% block head %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <style>
+        body {
+            padding-top: 60px; /* Adjusted to accommodate the fixed navbar */
+            position: relative;
+            margin-bottom: 60px; /* Adjusted to accommodate the fixed footer */
+        }
+
+        .navbar {
+            background-color: #007bff; /* Set the background color of the navbar */
+            color: white;
+        }
+
         .footer {
             position: absolute;
             bottom: 0;
             width: 100%;
             height: 60px;
             line-height: 60px;
+            background-color: #f8f9fa; /* Light gray background */
         }
 
-        .header {
-            top: 0;
-            height: 60px;
-            line-height: 60px;
+        label {
+            text-transform: capitalize;
         }
     </style>
     <title>{% block title %}{% endblock %} - Sample</title>
@@ -31,14 +43,11 @@
     <div id="header">
         {% include 'nav.html' %}
         {% include 'flash.html' %}
-        <style>
-            label {
-                text-transform: capitalize;
-            }
-        </style>
     </div>
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer" class="footer bg-light text-center">
+    <div id="content" class="container">
+        {% block content %}{% endblock %}
+    </div>
+    <div id="footer" class="footer text-center">
         {% block footer %}
         &copy; Copyright 2022.
         {% endblock %}
