--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html>
 
 <head>
@@ -25,11 +25,8 @@
 
         #content {
             flex: 1;
-            /* Makes content expand to fill available space */
             overflow-y: auto;
-            /*padding-top: 60px;*/
-            /* Adjust if the header height changes */
-            border: 1px solid red;
+            border: 1px solid rgb(44, 5, 63);
         }
 
         .footer {
@@ -38,9 +35,7 @@
         }
 
         .header {
-            /*height: 60px;*/
-
-            /*line-height: 60px;*/
+            
             line-height: 40px;
         }
 
