--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -35,7 +35,7 @@
         .footer {
             height: 60px;
             line-height: 60px;
-            background-color: #343a40; /* background color for the footer */
+            background-color:rgb(28, 3, 40); /* background color for the footer */
             color: #ffffff; /* text color for the footer */
         }
 
