--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -22,6 +22,7 @@
             display: flex;
             flex-direction: column;
             background-color: #f8f9fa; /* background color */
+            color:#460a7a; /* text color
         }
 
         #content {
