--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -22,10 +22,10 @@
             display: flex;
             flex-direction: column;
             background-color: #f8f9fa; /* background color */
-            color:#460a7a; /* text color
+            color:#460a7a; /* text color*/
         }
 
-        #content {
+        .content {
             flex: 1;
             overflow-y: auto;
             border: 1px solid rgb(28, 3, 40);
