--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -25,7 +25,7 @@
             color:#460a7a; /* text color*/
         }
 
-        .content {
+        #content {
             flex: 1;
             overflow-y: auto;
             border: 1px solid rgb(28, 3, 40);
