--- a/flask_sample/templates/nav.html
+++ b/flask_sample/templates/nav.html
@@ -47,3 +47,45 @@
         </div>
     </div>
 </nav>
+<style>
+    /* Custom styles for the navigation bar */
+    .navbar {
+        background-color: #b4b2b9; /* Default navbar background color */
+        border-bottom: 2px solid #9f77e6; /* Border color */
+        transition: background-color 0.3s; /* Smooth transition for background color change */
+        color:#111111;
+    }
+
+    .navbar:hover {
+        background-color: #9249d2; /* Navbar background color on hover (light purple) */
+    }
+
+    .navbar-brand {
+        color: #111111; /* Brand text color */
+        font-weight: bold;
+    }
+
+    .navbar-toggler {
+        border-color: #180823; /* Toggler color */
+    }
+
+    .navbar-nav .nav-link {
+        color: #1a0632; /* Navbar link text color */
+    }
+
+    .navbar-nav .nav-link:hover {
+        color: #301251; /* Navbar link text color on hover */
+    }
+
+    .navbar-nav .dropdown-menu {
+        background-color: #d5dade; /* Dropdown menu background color */
+    }
+
+    .navbar-nav .dropdown-menu a {
+        color: #080808; /* Dropdown menu item text color */
+    }
+
+    .navbar-nav .dropdown-menu a:hover {
+        background-color: #8d69f0; /* Dropdown menu item background color on hover */
+    }
+</style>
