--- a/flask_sample/auth/templates/login.html
+++ b/flask_sample/auth/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 <div class="container-fluid">
-    <div class="h3">Login</div>
+    <div class="h3">Login to Horror Movies!!!!!!!</div>
     <form method="POST">
         {{ form.hidden_tag() }}
         {{render_field(form.email)}}
