--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -51,7 +51,7 @@
             text-transform: capitalize;
         }
     </style>
-    <title>{% block title %}{% endblock %} - Sample</title>
+    <title>{% block title %}{% endblock %} - Movie Explorer</title>
     {% endblock %}
 </head>
 
