--- a/flask_sample/templates/list_sample.html
+++ b/flask_sample/templates/list_sample.html
@@ -5,8 +5,8 @@
     <div class="h1">List Samples</div>
     <form class="row row-cols-lg-auto g-3 align-items-center">
         <div class="col-12">
-            <label class="form-label" for="name">Name/Key</label>
-            <input type="text" name="name" class="form-control" id="name" placeholder="name/key"
+            <label class="form-label" for="name">Title</label>
+            <input type="text" name="name" class="form-control" id="name" placeholder="title"
                 value="{{request.args.get('name') or ''}}">
         </div>
         <div class="col-12">
