--- a/flask_sample/auth/templates/register.html
+++ b/flask_sample/auth/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 <div class="container-fluid">
-    <div class="h3">Register</div>
+    <div class="h3">Register for Horror Movies!!!!</div>
     <form method="POST">
         {{ form.hidden_tag() }}
         {{render_field(form.username)}}
