--- a/flask_sample/templates/edit_sample.html
+++ b/flask_sample/templates/edit_sample.html
@@ -5,18 +5,18 @@
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
-    <div class="h1">Edit Sample</div>
+    <div class="h1">Edit Notes</div>
     <div>
         <form method="POST">
             <div class="form-group mb-3">
-                <label class="form-label" for="n">Key</label>
+                <label class="form-label" for="n">Title</label>
                 <input class="form-control" id="n" name="key" readonly value="{{row.name}}" />
             </div>
             <div class="form-group mb-3">
-                <label class="form-label" for="v">Value</label>
+                <label class="form-label" for="v">Note</label>
                 <input class="form-control" id="v" name="value" value="{{row.val}}" />
             </div>
-            <input type="submit" class="btn btn-primary" value="Update Sample" />
+            <input type="submit" class="btn btn-primary" value="Update" />
         </form>
     </div>
 </div>
