--- a/flask_sample/templates/nav.html
+++ b/flask_sample/templates/nav.html
@@ -1,7 +1,7 @@
 {% from "_dropdown_nav.html" import dropdown_nav %}
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sample</a>
+        <a class="navbar-brand" href="#">Horror Movies</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -23,12 +23,19 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('auth.profile')}}">Profile</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/movies">Movies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/favourites">Favourites</a>
+                </li>
                 <!-- samples nav -->
                 {% set samples = [
                 ("sample.add", "Add"),
                 ("sample.list", "List"),
                 ] %}
-                {{dropdown_nav("Samples", samples)}}
+                {{dropdown_nav("Notes", samples)}}
+
                 <!-- roles nav (requires admin )-->
                 {% if current_user.has_role("Admin") %}
                 {% set roles = [
