--- a/flask_sample/movies/templates/add_movie.html
+++ b/flask_sample/movies/templates/add_movie.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Update movie{% endblock %}
+{% block title %}Add Movie{% endblock %}
 {% block content %}
 <style>
     
@@ -26,7 +26,7 @@
     }
     button {
         padding: 10px;
-        background-color: #007BFF;
+        background-color: #2d0435;
         color: #fff;
         border: none;
         cursor: pointer;
@@ -36,64 +36,27 @@
 <h1>Add New Movie</h1>
 
 <div class="updateForm">
-    <form id="updatemovieForm">
-        <label for="imageURL">Image URL:</label>
-        <input type="text" id="imageURL" name="imageURL" required>
+    <form method="POST" action="{{ url_for('movies.add_movie') }}">
+        {{ form.hidden_tag() }}
+        {{ form.csrf_token }}
+        {{ form.imageURL.label }}
+        {{ form.imageURL }}
+        {{ form.genre.label }}
+        {{ form.genre }}
+        {{ form.title.label }}
+        {{ form.title }}
+        {{ form.imdbrating.label }}
+        {{ form.imdbrating }}
+        {{ form.released.label }}
+        {{ form.released }}
+        {{ form.type.label }}
+        {{ form.type }}
+        {{ form.synopsis.label }}
+        {{ form.synopsis }}
 
-        <label for="genre">Genre:</label>
-        <input type="text" id="genre" name="genre"  required>
-
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title"  required>
-
-        <label for="imdbrating">IMDb Rating:</label>
-        <input type="text" id="imdbrating" name="imdbrating"  required>
-
-        <label for="released">Released:</label>
-        <input type="text" id="released" name="released"  required>
-
-        <label for="type">Type:</label>
-        <input type="text" id="type" name="type"  required>
-
-        <label for="synopsis">Synopsis:</label>
-        <textarea id="synopsis" name="synopsis" rows="4" required></textarea>
-
-        <button type="button" onclick="addMovie()">Add Movie</button>
+        <button type="submit">Add Movie</button>
     </form>
 </div>
 
-<script>
-    function addMovie() {
-    // Get the form data
-        var formData = {
-            imageURL: document.getElementById('imageURL').value,
-            genre: document.getElementById('genre').value,
-            title: document.getElementById('title').value,
-            imdbrating: document.getElementById('imdbrating').value,
-            released: document.getElementById('released').value,
-            type: document.getElementById('type').value,
-            synopsis: document.getElementById('synopsis').value
-        };
-
-        // Make an AJAX request to the Flask endpoint
-        fetch('/movies/add', {
-            method: 'POST',
-            body: new URLSearchParams(formData),
-        })
-        .then(response => response.json())
-        .then(data => {
-            // Handle the response from the server
-            if (data.message) {
-                alert(data.message);
-            } else {
-                // Redirect to the movies listing page after successful update
-                window.location.href = '/movies';
-            }
-        })
-        .catch(error => {
-            console.error('Error:', error);
-        });
-}
-</script>
 
 {% endblock %}
