--- a/flask_sample/movies/templates/movie_details.html
+++ b/flask_sample/movies/templates/movie_details.html
@@ -33,7 +33,7 @@
     <p><strong>Genre:</strong> {{ movie.genre }}</p>
     <p><strong>IMDb Rating:</strong> {{ movie.imdbrating }}</p>
     <p><strong>Released:</strong> {{ movie.released }}</p>
-    <p><strong>Language:</strong> {{ movie.language }}</p>
+    <p><strong>IMDB ID:</strong> {{ movie.imdb_id }}</p>
     <p><strong>Synopsis:</strong> {{ movie.synopsis }}</p>
     <img src="{{ movie.imageURL }}" alt="{{ movie.title }}">
 </div>
