--- a/flask_sample/templates/nav.html
+++ b/flask_sample/templates/nav.html
@@ -29,6 +29,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/favourites">Favourites</a>
                 </li>
+                {% if current_user.has_role('Admin') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/users">Manage Users</a>
+                </li>
+                {%endif%}
                 <!-- samples nav -->
                 {% set samples = [
                 ("sample.add", "Add"),
